cupt (2.3.3~) UNRELEASED; urgency=low

  * console:
    - 'tar-metadata': include also Cupt-specific configuration files.
  * doc:
    - tutorial:
      - Explicitly documented what infrastructure Cupt uses.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 08 Jan 2012 13:59:45 +0200

cupt (2.3.2) unstable; urgency=low

  * console:
    - 'show', 'showsrc': package name wildcards now work with '--all-versions'.
      (Closes: #651889)
  * lib:
    - cache:
      - Pin preferences: fixed 'origin' pin type support. (Closes: #651890)
      - Pin preferences: print a more user-friently error message when pin
        priority is not a valid integer. (Closes: #651894)
      - Parsing Release files: use 'Version' field when it's present.
        (Closes: #652379)
  * doc:
    - man/cupt.1:
      - Documented the option '--show-not-preferred'. (Closes: #651888)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 19 Dec 2011 20:16:26 +0200

cupt (2.3.1) unstable; urgency=low

  * console:
    - Managing packages:
      - 'reinstall': always use and enforce the installed version.
        (Closes: #650214)
  * lib:
    - cache:
      - Fixed printing an error reason when could not open a release file
        (a regression since 2.3.0~rc1).
    - system/worker:
      - 'getArchivesInfo': avoid using glob(3) which follows symlinks.
        (Closes: #638327)
      - Updating release and index data: cleaning obsolete files: avoid using
        glob(3) which follows symlinks. (Closes: #650128)
  * doc:
    - man/cupt.1:
      - Removed a documentation for option '--no-install-unpacked' which was
        removed in 0.6.5. (Closes: #650126)
    - tutorial:
      - Fixed typos and misspellings found by A. Costa. (Closes: #650372)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 04 Dec 2011 11:05:22 +0200

cupt (2.3.0) unstable; urgency=low

  * Upload to unstable.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 27 Nov 2011 13:14:13 +0200
