@@ -1153,6 +1153,17 @@ void __build_mini_action_graph(const shared_ptr< const Cache >& cache,
 							continue;
 						}
 
+						const auto& potentialEdgeAttribute = edgeToRestoreIt->second.second;
+						if (potentialEdgeAttribute.getLevel() < minimumAttributeLevel)
+						{
+							if (debugging)
+							{
+								debug("  ignoring potential edge '%s' -> '%s'",
+										newPotentialFromPtr->toString().c_str(), newPotentialToPtr->toString().c_str());
+							}
+							continue;
+						}
+
 						if (ignoring)
 						{
 							miniGaa.graph.addEdgeFromPointers(newPotentialFromPtr, newPotentialToPtr);
